# trabajo-SO

./: README.md
openmp/: CMakeLists.txt  README.md  main.cpp
paralelo-1/: CMakeLists.txt  README.md  main.cpp
secuencial/: CMakeLists.txt  README.md  main.cpp
