cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 14)
project( openmp )
find_package( OpenCV REQUIRED )
find_package(OpenMP)
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
add_executable( openmp main.cpp )
target_link_libraries( openmp ${OpenCV_LIBS} ${OpenMP_CXX_LIBRARIES} )
